# shorter

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  justfile
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  clippy.yml  rust_test.yml
src/: constants.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  prelude.rs  tests.rs  user.rs
src/auth/: middleware.rs  mod.rs  oauth.rs
src/db/: mod.rs
src/db/migration/: m20250118_000001_create_tables.rs  mod.rs
src/entities/: link.rs  mod.rs  pkce_state.rs  user.rs
src/oauth/: middleware.rs  mod.rs
src/static/: shorter.css
src/web/: admin.rs  auth.rs  csrf.rs  mod.rs  prelude.rs
templates/: 404.html  admin_base.html  admin_create.html  admin_delete.html  admin_edit.html  admin_list.html  base.html  link_preview.html  public_base.html
