[package]
name = "shorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "http2"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }

# Database - sea-orm
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1.1.17" }


# Authentication
openidconnect = "3.5"
chrono = { version = "0.4", features = ["serde"] }
http = "1.3.1"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "h2",
    "rustls-tls-webpki-roots",
] }
time = "0.3.44"

tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing-subscriber = "0.3.20"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

axum-tracing-opentelemetry = { version = "0.11.0", features = [
    "tracing_subscriber_ext",
] }
axum-csp = { git = "https://github.com/yaleman/axum-csp/", rev = "cb55f3d" }

askama = { version = "0.14.0" }

tower-http = { version = "^0.6.6", features = [
    "fs",
    "trace",
    "add-extension",
    "compression-gzip",
] }
tower-sessions = { version = "^0.14.0", features = ["axum-core"] }
tracing = "^0.1.41"
async-trait = "0.1.89"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.23.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }


[dev-dependencies]
hyper = "1.7.0"
serde_json = "1.0.145"
tower = "0.5.2"
