[package]
name = "shorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros", "http2"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }

# Database - sea-orm
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1.1.19" }


# Authentication
openidconnect = "4.0"
chrono = { version = "0.4", features = ["serde"] }
http = "1.4.0"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "h2",
    "rustls-tls-webpki-roots",
] }
time = "0.3.47"

tokio = { version = "1.49.0", features = ["full", "tracing"] }
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }

axum-csp = "0.0.10"

axum-tracing-opentelemetry = { version = "0.33.0" }
askama = { version = "0.15.4" }

tracing = { version = "^0.1.44", features = ["release_max_level_debug"] }
tower-http = { version = "^0.6.8", features = [
    "fs",
    "trace",
    "add-extension",
    "compression-gzip",
] }
tower-sessions = { version = "^0.14.0", features = ["axum-core"] }
async-trait = "0.1.89"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.25.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = { version = "0.23.36", features = [
    "brotli",
    "hashbrown",
    "zlib",
    "aws-lc-rs",
] }


[dev-dependencies]
hyper = "1.8.1"
serde_json = "1.0.149"
tower = "0.5.3"


[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
lto = "fat"
incremental = false
